--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
       <img src="kelosun.jpeg" width="160" height="160" style="border-radius: 80%">
       <h2 style="font-family: 'Syncopate', sans-serif; font-weight: 10; text-transform: none;">Jiaqi Sun&nbsp<a href="#" onclick="return false;" style="color: white;"><img src="resume.png" height="35" width="35"></a></h2>
         <hr style="width: 50%; background-color: #E83951; border-color: #E83951;">
-    <a href="https://weibo.com/u/6087769583" style="color: white;"><i class="fab fa-weibo" style="font-size: 2em;"></i></a>
+    <a class="intro-list" href="https://weibo.com/u/6087769583" style="color: white;"><i class="fab fa-weibo" style="font-size: 2em;"></i></a>
     &nbsp
-    <a style="color: white;" onmouseenter="mouseEnter()" onmouseleave="mouseLeave()"><i class="fab fa-weixin" style="font-size: 2em;"></i></a>
+    <a class="intro-list" style="color: white;" onmouseenter="mouseEnter()" onmouseleave="mouseLeave()"><i class="fab fa-weixin" style="font-size: 2em;"></i></a>
     &nbsp
-    <a href="https://github.com/kelosun" style="color: white;"><i class="fab fa-github" style="font-size: 2em;"></i></a>
+    <a class="intro-list" href="https://github.com/kelosun" style="color: white;"><i class="fab fa-github" style="font-size: 2em;"></i></a>
     &nbsp
     <div id="wechat" class="wechat-info">
       <img src="wechat.jpg" width="200" >
